<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.liyang.remotekyc.EmailPasswordVerification"
    android:padding="20dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Email and Password Authentication"
        android:textSize="25dp"
        android:layout_marginBottom="70dp"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"/>

    <!---->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Email:"
        android:layout_margin="10dp"
        android:textSize="18sp"
        android:id="@+id/emailtitle"
        android:layout_below="@id/title"/>

    <EditText
        android:id="@+id/email"
        android:layout_below="@id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="Email"
        android:layout_toRightOf="@id/emailtitle"/>

    <!---->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Password:"
        android:layout_margin="10dp"
        android:textSize="18sp"
        android:id="@+id/pwtitle"
        android:layout_below="@id/email"/>

    <EditText
        android:id="@+id/password"
        android:layout_below="@id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="Password"
        android:layout_toRightOf="@id/pwtitle"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Login"
        android:id="@+id/login"
        android:background="@color/yellow"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/password"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Forget Password?"
        android:id="@+id/forgetpass"
        android:layout_below="@+id/login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"/>

</RelativeLayout>
