...
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <EditText
        android:id="@+id/phoneverify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Enter Phone Number"
        android:layout_marginEnd="27dp"
        android:layout_marginTop="175dp"
...
        android:layout_above="@+id/phone"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="sendotp"
        android:text="Send OTP"
        android:id="@+id/sendotp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Button
...
